GNOME Bugzilla – Bug 708793
glib build fails with clang < 3.1: error: expected ';' after top level declarator
Last modified: 2013-10-14 23:31:12 UTC
Created attachment 255733 [details] build log I'm the maintainer of glib in MacPorts, and I just discovered that after updating our glib2 port to 2.38.0, it now fails to build with clang 2.9 and 3.0. (Some versions of clang distributed with older versions of Xcode were based on these versions.) It builds fine with clang 3.1 and later (and current versions of Xcode). This was reported to the MacPorts project here: https://trac.macports.org/ticket/40590 The error is: In file included from deprecated/gallocator.c:1: In file included from deprecated/gallocator.c:25: ../glib/gmessages.h:192:49: error: expected ';' after top level declarator ...) __attribute__((analyzer_noreturn)) ^ ; ../glib/gmessages.h:251:1: error: unknown type name 'GPrintFunc' GPrintFunc g_set_print_handler (GPrintFunc func); ^ ../glib/gmessages.h:251:33: error: unknown type name 'GPrintFunc' GPrintFunc g_set_print_handler (GPrintFunc func); ^ ../glib/gmessages.h:256:1: error: unknown type name 'GPrintFunc' GPrintFunc g_set_printerr_handler (GPrintFunc func); ^ ../glib/gmessages.h:256:36: error: unknown type name 'GPrintFunc' GPrintFunc g_set_printerr_handler (GPrintFunc func); ^ 5 errors generated.
Note that gmessages.h gets installed, and that a similar build error occurs when trying to compile software that uses gmessages.h, like pango or poppler. So while it's easy to mark glib2 in MacPorts as requiring clang 3.1 or later, it's more difficult to identify all the other ports that use gmessages.h and mark them as well. So we'd prefer to fix gmessages.h so that it can be compiled by clang < 3.1. I should also mention that simply adding a semicolon at location indicated in the error message does not result in a successful compile.
does it work if you change it to: static void g_error (const gchar *format, ...) G_ANALYZER_NORETURN; static void g_error (const gchar *format, ...) { ...
Ah yes, that does compile with clang 3.0! The same change is needed for g_critical.
fixed in git
*** Bug 710044 has been marked as a duplicate of this bug. ***