gmessages: fix clang annotations to work with older versions

https://bugzilla.gnome.org/show_bug.cgi?id=708793