glib/gmessages.h
@@ -188,9 +188,12 @@ void g_assert_warning         (const char *log_domain,
                                        G_LOG_LEVEL_DEBUG,    \
                                        format)
 #else   /* no varargs macros */
+static void g_error (const gchar *format, ...) G_ANALYZER_NORETURN;
+static void g_critical (const gchar *format, ...) G_ANALYZER_NORETURN;
+
 static void
 g_error (const gchar *format,
-         ...) G_ANALYZER_NORETURN
+         ...)
 {
   va_list args;
   va_start (args, format);
@@ -210,7 +213,7 @@ g_message (const gchar *format,
 }
 static void
 g_critical (const gchar *format,
-            ...) G_ANALYZER_NORETURN
+            ...)
 {
   va_list args;
   va_start (args, format);
